--- a/app/dockerfile
+++ b/app/dockerfile
@@ -33,4 +33,7 @@ COPY . .
 
 EXPOSE 8000
 
+RUN useradd appuser && chown -R appuser:appuser /app
+USER appuser
+
 ENTRYPOINT ["/app/app/entrypoint.sh"]
